--- a/media/css/bar.css
+++ b/media/css/bar.css
@@ -1,5 +1,19 @@
 body{margin-bottom:50px;}
-#dbg_bar *{box-sizing:border-box;}
+#dbg_bar *{
+	box-sizing:border-box;
+	background-color:white;
+}
+#dbg_bar [class*=fa-]{
+	display: inline-block;
+	font-family: FontAwesome;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color:#777;
+}
+
 #dbg_bar{
 	position: fixed;
 	bottom: 0;
@@ -7,7 +21,7 @@ body{margin-bottom:50px;}
 	width: 100%;
 	margin: 0;	
 	padding: 0;
-	z-index:100;
+	z-index:99999; /*Greater than wp-admin sidebar*/
 }
 #debug-bar-resize{
 	height: 4px;
@@ -112,8 +126,20 @@ body{margin-bottom:50px;}
 #dbg_bar ol{list-style:decimal;}
 
 
-#dbg_bar i.time{
+#dbg_bar .tabs .bdg{
+	background-color:blue;
+	color:white;
+	font-size:0.7em;
+	display: inline-block;
+	min-width: 10px;
+	padding: 5px 10px;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	background-color: #777;
+	border-radius: 10px;	
 	
 }
-#dbg_bar i.mem{
-}
+
