--- a/views/admin/Tab_Functions.phtml
+++ b/views/admin/Tab_Functions.phtml
@@ -1,3 +1,12 @@
+<?php
+/*
+http://php.net/manual/en/language.functions.php
+http://codex.wordpress.org/Function_Reference
+http://phpxref.ftwr.co.uk/buddypress/nav.html?_functions/index.html
+*/
+$classes = get_declared_classes();
+sort($classes);				
+?>
 <label>Location</label>
 			<select id=sysinfo_class>
 				<optgroup label=Global>
