--- a/views/admin/Tab_Info.phtml
+++ b/views/admin/Tab_Info.phtml
@@ -1,10 +1,42 @@
 <?php 
-global $_wp_additional_image_sizes; 
-#global $wp_styles,$wp_scripts;
+global $_wp_additional_image_sizes, $wpdb, $wp_version; 
+
+$have_query_cache = System_Info_SQL::option('have_query_cache');
+$query_cache_size = System_Info_SQL::option('query_cache_size');
+
 ?>
 
 <?php #global $wp_scripts; var_dump($wp_scripts); ?>
 <?php #global $wp_styles; var_dump($wp_styles); ?>
+
+<h3>Speed</h3>
+<table class=widefat>
+	<tr><th>OpCode Cache</th><td>
+		<?php if( extension_loaded( 'xcache' ) ) : ?>XCache
+		<?php elseif( extension_loaded( 'apc' ) ) : ?>APC
+		<?php elseif( extension_loaded( 'eaccelerator' ) ) : ?>EAccelerator
+		<?php elseif( extension_loaded( 'Zend Optimizer+' ) ) : ?>Zend Optimizer+
+		<?php elseif( extension_loaded( 'wincache' ) ) : ?>WinCache
+		<?php else: ?>None
+		<?php endif; ?>
+	</td></tr>
+	
+	<tr><th>Redis</th><td>
+	</td></tr>
+	<?php if(function_exists('apache_get_modules') ) : $modules = apache_get_modules();  ?>
+		<tr><th>Apache Modules</th><td>
+			<?php echo print_r($modules); ?>
+		</td></tr>	
+	<?php endif; ?>
+	<tr><th>Memory Limit
+	<tr><th>APC Cache Limit
+	
+	<tr><th>MySQL Cache</th><td></td></tr>
+	
+	<tr><th>Query Cache</th><td><?php echo $have_query_cache ?></td></tr>
+	<tr><th>Cache Size</th><td><?php echo $query_cache_size?></td></tr>
+	
+</table>
 
 <table class='wp-list-table widefat fixed server_info'>
 	<tr><th colspan=2 class=hdr>Software
@@ -22,8 +54,7 @@ global $_wp_additional_image_sizes;
 					<span><?php echo $m?></span>
 				<?php endforeach; ?>
 			</td></tr>
-	<?php endif; ?>
-		
+	<?php endif; ?>		
 	
 	<tr><th colspan=2 class=hdr>Wordpress Info</th></tr>
 	<tr><th>Wordpress Version</th><td><?php echo $wp_version?></tr>
@@ -122,15 +153,7 @@ global $_wp_additional_image_sizes;
 					echo "<label></label> {$info[$f]}<br/>";
 			?></pre>
 		<?php endif; ?></td></tr>
-		<tr><th>OpCode Cache</th><td>
-			<?php if( extension_loaded( 'xcache' ) ) : ?>XCache
-			<?php elseif( extension_loaded( 'apc' ) ) : ?>APC
-			<?php elseif( extension_loaded( 'eaccelerator' ) ) : ?>EAccelerator
-			<?php elseif( extension_loaded( 'Zend Optimizer+' ) ) : ?>Zend Optimizer+
-			<?php elseif( extension_loaded( 'wincache' ) ) : ?>WinCache
-			<?php else: ?>None
-			<?php endif; ?>
-		</td></tr>
+		
 		<?php $disabled = ini_get('disable_functions'); ?>
 		<tr><th>Disabled Functions</th><td>
 		<?php if(!empty($disabled)) :?> 
