--- a/views/admin/Tab_Procs.phtml
+++ b/views/admin/Tab_Procs.phtml
@@ -1,13 +1,21 @@
-<table class='wp-list-table widefat fixed proc_table datatable'><thead><tr>
-	<?php $procs = System_Info_Tools::running_procs(); $keys = array_keys($procs[0]); ?>
-	<?php foreach($keys as $h): ?>
-		<th><?php echo $h?>					
-	<?php endforeach; ?>
+<?php 
+	$procs = System_Info_Tools::running_procs(); 						
+?>
+<table class='wp-list-table widefat fixed proc_table datatable'>
+	<thead>
+		<tr>			
+			<?php foreach($keys as $h): ?>
+				<th><?php echo $h?></th>
+			<?php endforeach; ?>			
+		</tr>
 	</thead>
-	 <?php $i=0; foreach($procs as $p) : ?>
-		<tr <?php echo ($i++%2)?'class=alternate':''?>>
-		<?php foreach($p as $d) : ?>
-			<td><?php echo $d?>
+	<tbody>
+		<?php foreach($procs as $p) : ?>
+			<tr>
+				<?php foreach($p as $d) : ?>
+					<td><?php echo System_Info_Tools::color_format($d)?></td>
+				<?php endforeach; ?>
+			</tr>
 		<?php endforeach; ?>
-	<?php endforeach; ?>
+	<tbody>
 </table>
