--- a/views/debug/filters.phtml
+++ b/views/debug/filters.phtml
@@ -7,7 +7,7 @@
 		echo " {$filter_percentage}% of Request Time ";
 		echo "<progress max=100 value=\"{$filter_percentage}\"></progress>";
 	}		
-	d($dbg_filter_calls);
+	#d($dbg_filter_calls);
 ?>
 
 
@@ -20,7 +20,7 @@
 		</tr>
 	</thead>
 	<tbody>
-	<?php foreach($GLOBALS[dbg_filter_times] as $filter=>$duration) : ?>
+	<?php foreach($GLOBALS['dbg_filter_times'] as $filter=>$duration) : ?>
 		<tr>
 			<th><?php echo $filter ?></th>
 			<td><?php echo number_format($duration, 8)?>ms</td>
