--- a/views/debug/errors.phtml
+++ b/views/debug/errors.phtml
@@ -7,12 +7,12 @@ $last_error = error_get_last();
 ?>
 <table class=widefat>
 	<thead>
-		<tr>
-			<td>Error Number</td>
-			<td>Error</td>
-			<td>File</td>
-			<td>Line</td>
-			<td>Context</td>
+		<tr class=hdr>
+			<th>Error Number</th>
+			<th>Error</th>
+			<th>File</th>
+			<th>Line</th>
+			<th>Context</th>
 		</tr>
 	</thead>
 	<tbody>
