--- a/media/css/bar.css
+++ b/media/css/bar.css
@@ -1,7 +1,6 @@
 body{margin-bottom:50px;}
 #dbg_bar *{
 	box-sizing:border-box;
-	background-color:white;
 }
 #dbg_bar [class*=fa-]{
 	display: inline-block;
@@ -24,20 +23,21 @@ body{margin-bottom:50px;}
 	z-index:99999; /*Greater than wp-admin sidebar*/
 }
 #debug-bar-resize{
-	height: 4px;
+	height: 10px;
 	width: 100%;
-	background: #fff;
+	background: white;
 	cursor: move;	
 }
 
 #debug-bar-resize:hover{
-	
+	background-color:red;
 }
 
 #dbg_bar .tabs{	
 	background: #f5f5f5;
 	border-top:1px solid grey;	
 	padding: 10px 10px 0 0;
+	margin:0;
 }
 #dbg_bar .tabs li:not(.right){
 	border-right:1px solid black;
@@ -82,7 +82,7 @@ body{margin-bottom:50px;}
 #dbg_bar .dbg_body .panel.active{display:block;}
 #dbg_bar .panel > table{width:100%;}
 #dbg_bar .panel > table td{padding:5px;}
-#dbg_bar .panel > table{width:100%;}
+#dbg_bar .panel > table{width:100%;border-collapse:collapse;}
 #dbg_bar table thead th{
 	font-weight:bold;
 	text-align:left;
@@ -91,7 +91,8 @@ body{margin-bottom:50px;}
 #dbg_bar th{font-weight:bold;text-align:left;}
 #dbg_bar th.hdr{
 	font-weight:bold;
-	background-color:darkgrey;
+	background-color:black;
+	color:white;
 	text-align:center;
 }
 #dbg_bar tbody tr:nth-child(even){background-color:#f2f2f2;}
@@ -100,7 +101,6 @@ body{margin-bottom:50px;}
 
 
 .dbg_body code.sql{
-	max-width:70%;
 	display:block;
 	background-color:rgb(20, 20, 20);
 	border-radius:3px;
