--- a/views/admin/SystemInfo.phtml
+++ b/views/admin/SystemInfo.phtml
@@ -3,28 +3,27 @@ global $wpdb;
 $tab = isset($_GET['tab']) ? $_GET['tab']:'info';
 $start = microtime(true);
 ?>
-<div class=wrap>
-	<h2><i class='dashicons dashicons-gauge'></i> System Information</h2>
-	<br/>
+<div class='wrap dev-bar-admin'>
+	<h2><i class='fa fa-info'></i> System Information - <span><?php echo $tab?></span></h2>
 	<?php 
 		$tabs = array(
-			'Info'				=>	array('info','fa fa-tachometer'),				
-			'MySQL Info'		=>	array('mysql_info','fa fa-database'),		
-			'MySQL Performance'	=>	array('mysql_perf','fa fa-database'),		
-			'Database'			=>	array('db','fa fa-database'),		
-			'Permissions'		=>	array('perm','fa fa-lock'),		
-			'Procs'				=>	array('procs','fa fa-cogs'),				
-			'Services'			=>	array('services','fa fa-crosshairs'),			
-			'Open Ports'		=>	array('ports','fa fa-bullseye'),			
-			'Rewrite Rules'		=>	array('rewrite','fa fa-list'),				
-			'Cron'				=>	array('cron','fa fa-clock-o'),				
-			'DNS'				=>	array('dns','fa fa-info'),					
-			'Whois'				=>	array('whois','fa fa-info-circle'),				
-			'Error Log'			=>	array('errors','fa fa-exclamation-triangle'),		
-			'Tools'				=>	array('tools','fa fa-wrench'),		
-			'Hooks'				=>	array('hooks','fa fa-anchor'),		
-			'Functions'			=>	array('functions','fa fa-flag'),		
-			'WP Options'		=>	array('options','fa fa-sliders')		
+			'Info'				=>	array('info',		'fa fa-tachometer'),				
+			'MySQL Info'		=>	array('mysql_info',	'fa fa-database'),		
+			'MySQL Performance'	=>	array('mysql_perf',	'fa fa-database'),		
+			'Database'			=>	array('db',			'fa fa-database'),		
+			'Permissions'		=>	array('perm',		'fa fa-lock'),		
+			'Procs'				=>	array('procs',		'fa fa-cogs'),				
+			'Services'			=>	array('services',	'fa fa-crosshairs'),			
+			'Open Ports'		=>	array('ports',		'fa fa-bullseye'),			
+			'Rewrite Rules'		=>	array('rewrite',	'fa fa-list'),				
+			'Cron'				=>	array('cron',		'fa fa-clock-o'),				
+			'DNS'				=>	array('dns',		'fa fa-info'),					
+			'Whois'				=>	array('whois',		'fa fa-info-circle'),				
+			'Error Log'			=>	array('errors',		'fa fa-exclamation-triangle'),		
+			'Tools'				=>	array('tools',		'fa fa-wrench'),		
+			'Hooks'				=>	array('hooks',		'fa fa-anchor'),		
+			'Functions'			=>	array('functions',	'fa fa-flag'),		
+			'WP Options'		=>	array('options',	'fa fa-sliders')		
 		);
 		
 		if( !System_Info_Tools::exec_enabled()){
@@ -47,7 +46,7 @@ $start = microtime(true);
 			}
 		?>			
 	</div>
-	<div>
+	<div class='container <?php echo $tab?>'>
 		<?php 			
 			switch($tab){
 				case 'info': 			System_Info_Admin::page_info(); break;
@@ -64,7 +63,7 @@ $start = microtime(true);
 				case 'shell': 			System_Info_Admin::page_shell(); break;
 				case 'functions': 		System_Info_Admin::page_func(); break;
 				case 'mysql_info':		System_Info_Admin::page_mysql_info(); break;
-				#case 'mysql_perf':		include('Tab_Mysql_Perf.phtml'); ;break;
+				case 'mysql_perf':		include('Tab_Mysql_Perf.phtml'); ;break;
 				case 'services':		System_Info_Admin::page_services(); break;
 				case 'ports':			System_Info_Admin::page_open_ports(); break;
 				case 'options': 		include('Tab_Options.phtml'); break;
@@ -75,19 +74,3 @@ $start = microtime(true);
 		?>
 	</div>
 </div>
-<script>
-	function optimizeTable(table){
-		jQuery.ajax({
-			url: ajaxurl,
-			data:{action:'sysinfo_optimize_table', table:table},
-			dataType:'html',
-			success:function(h){
-				h = '<div>'+h+'</div>';
-				jQuery(h).dialog({
-					modal: true,
-					buttons: { Ok: function() { jQuery( this ).dialog( "close" );}}
-				});
-			}
-		});
-	}
-</script>
