--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -29,3 +29,15 @@
 .container.rewrite{font-size:1.3em;background-color:white;padding:15px;}
 
 #toplevel_page_sys_info div.wp-menu-image:before{color:#f39c12;}
+
+.thumb_example{
+	background-color:rgba(255,0,0,0.4);
+	text-align:center;
+	vertical-align:middle;
+	display:table-cell;
+	font-size:1.4em;
+	color:white;
+	font-weight:bold;	
+}
+
+th.hdr{font-size:1.3em;font-weight:bold;}
